--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@json2csv/plainjs": "^7.0.6",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@tabler/icons-react": "^3.1.0",
     "axios": "^1.6.7",
     "browser-image-compression": "^2.0.2",
